Change title from 'Equalizer Music' to 'Sung jhinwooo'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Equalizer Music</title>
+<title>Sung jhinwooo</title>
 
 <style>
 html, body {
