--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@ html, body {
   height: 100%;
 }
 
+  <!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+<script>
+  // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+const firebaseConfig = {
+  apiKey: "AIzaSyCFzIAZ5F5YRQJ3zjOb0U9KJGI6aed_WKI",
+  authDomain: "sololeveling-b9f87.firebaseapp.com",
+  projectId: "sololeveling-b9f87",
+  storageBucket: "sololeveling-b9f87.firebasestorage.app",
+  messagingSenderId: "85355794256",
+  appId: "1:85355794256:web:5e0b8e52d81d01cb202655"
+};
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+</script>
+  
 body {
   background: url("background.jpg") center/cover no-repeat;
 }
