--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Solo Leveling</title>
+<title>Solo Leveling Dashboard</title>
 <style>
 :root {
   --glow: #7f5cff;
@@ -12,9 +12,10 @@ body {
   margin:0; font-family:"Segoe UI", Arial, sans-serif;
   color:#eaeaff;
   background: url("background.jpg") center/cover fixed no-repeat;
+  overflow-x: hidden;
 }
 
-/* LOGIN */
+/* LOGIN SCREEN */
 #login {
   height:100vh; display:flex; justify-content:center; align-items:center;
 }
@@ -27,11 +28,14 @@ input, button {width:100%; padding:10px; margin-top:12px; border-radius:6px; bor
 input{background:#111;color:white;}
 button{background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; font-weight:bold; cursor:pointer;}
 
-/* MAIN CONTENT */
-#content {display:none; padding:20px;}
-section {background:var(--bg-glass); padding:20px; border-radius:14px; margin-bottom:30px;
-border:1px solid rgba(127,92,255,0.4); box-shadow:0 0 20px rgba(127,92,255,0.2);}
-section h2 {color:var(--glow); border-left:4px solid var(--glow); padding-left:10px; margin-bottom:15px;}
+/* MAIN DASHBOARD */
+#content {display:none; display:flex; height:100vh;}
+#menu {width:220px; background:var(--bg-glass); padding:20px; display:flex; flex-direction:column; border-right:1px solid var(--glow);}
+#menu h3{color:var(--glow); margin-bottom:15px;}
+.menu-btn{padding:12px; margin-bottom:10px; border:none; background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; border-radius:8px; cursor:pointer; text-align:left; font-weight:bold;}
+#main {flex:1; padding:20px; overflow-y:auto;}
+section {background:rgba(10,10,25,0.75); padding:20px; border-radius:14px; border:1px solid rgba(127,92,255,0.4); box-shadow:0 0 20px rgba(127,92,255,0.2); margin-bottom:20px;}
+section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10px; margin-bottom:15px;}
 
 /* GALLERY */
 #gallery img{width:150px;margin:10px;border-radius:10px;box-shadow:0 0 15px rgba(127,92,255,0.4);}
@@ -40,7 +44,7 @@ section h2 {color:var(--glow); border-left:4px solid var(--glow); padding-left:1
 /* HABITS */
 .habit{display:flex;justify-content:space-between;margin:10px 0;padding:8px 12px;background:rgba(0,0,0,0.4);border-radius:8px;}
 
-/* UPLOAD BUTTONS */
+/* UPLOAD */
 .upload-btn {margin-top:10px;padding:10px;border:none;border-radius:6px;background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; cursor:pointer;}
 
 /* EQUALIZER */
@@ -50,13 +54,12 @@ section h2 {color:var(--glow); border-left:4px solid var(--glow); padding-left:1
 @keyframes bounce{0%,100%{transform:scaleY(0.3);}50%{transform:scaleY(1);}}
 </style>
 </head>
-
 <body>
 
 <!-- LOGIN -->
 <div id="login">
   <div class="login-box">
-    <h2>LOGIN</h2>
+    <h2>SOLO LOGIN</h2>
     <input id="email" placeholder="Email">
     <input id="password" type="password" placeholder="Password">
     <button onclick="login()">ENTER</button>
@@ -64,48 +67,58 @@ section h2 {color:var(--glow); border-left:4px solid var(--glow); padding-left:1
   </div>
 </div>
 
-<!-- CONTENT -->
+<!-- DASHBOARD -->
 <div id="content">
+  <!-- LEFT MENU -->
+  <div id="menu">
+    <h3>MENU</h3>
+    <button class="menu-btn" onclick="showSection('gallerySection')">Gallery</button>
+    <button class="menu-btn" onclick="showSection('habitSection')">Habits</button>
+    <button class="menu-btn" onclick="toggleMusic()">Music</button>
+  </div>
 
-  <!-- MUSIC -->
-  <audio id="music" loop></audio>
+  <!-- MAIN AREA -->
+  <div id="main">
+    <!-- MUSIC -->
+    <audio id="music" loop>
+      <source src="music.mp3" type="audio/mp3">
+      Your browser does not support audio.
+    </audio>
+    <svg class="equalizer" id="equalizer" viewBox="0 0 100 100" onclick="toggleMusic()">
+      <rect class="bar" x="10" y="20" width="10" height="60"/>
+      <rect class="bar" x="30" y="20" width="10" height="60"/>
+      <rect class="bar" x="50" y="20" width="10" height="60"/>
+      <rect class="bar" x="70" y="20" width="10" height="60"/>
+      <rect class="bar" x="90" y="20" width="10" height="60"/>
+    </svg>
 
-  <!-- EQUALIZER -->
-  <svg class="equalizer" id="equalizer" viewBox="0 0 100 100" onclick="toggleMusic()">
-    <rect class="bar" x="10" y="20" width="10" height="60"/>
-    <rect class="bar" x="30" y="20" width="10" height="60"/>
-    <rect class="bar" x="50" y="20" width="10" height="60"/>
-    <rect class="bar" x="70" y="20" width="10" height="60"/>
-    <rect class="bar" x="90" y="20" width="10" height="60"/>
-  </svg>
+    <!-- GALLERY SECTION -->
+    <section id="gallerySection">
+      <h2>SHADOW GALLERY</h2>
+      <input type="file" id="photoUpload" accept="image/*">
+      <button class="upload-btn" onclick="uploadFile('photo')">Upload Photo</button>
+      <input type="file" id="videoUpload" accept="video/*">
+      <button class="upload-btn" onclick="uploadFile('video')">Upload Video</button>
+      <div id="gallery"></div>
+    </section>
 
-  <!-- GALLERY -->
-  <section>
-    <h2>SHADOW GALLERY</h2>
-    <input type="file" id="photoUpload" accept="image/*">
-    <button class="upload-btn" onclick="uploadFile('photo')">Upload Photo</button>
-    <input type="file" id="videoUpload" accept="video/*">
-    <button class="upload-btn" onclick="uploadFile('video')">Upload Video</button>
-    <div id="gallery"></div>
-  </section>
-
-  <!-- HABITS -->
-  <section>
-    <h2>DAILY QUESTS</h2>
-    <div class="habit">
-      <span>Workout</span>
-      <input type="checkbox" onchange="saveHabit('Workout',this.checked)">
-    </div>
-    <div class="habit">
-      <span>Study</span>
-      <input type="checkbox" onchange="saveHabit('Study',this.checked)">
-    </div>
-    <div class="habit">
-      <span>Meditation</span>
-      <input type="checkbox" onchange="saveHabit('Meditation',this.checked)">
-    </div>
-  </section>
-
+    <!-- HABIT SECTION -->
+    <section id="habitSection" style="display:none;">
+      <h2>DAILY QUESTS</h2>
+      <div class="habit">
+        <span>Workout</span>
+        <input type="checkbox" onchange="saveHabit('Workout',this.checked)">
+      </div>
+      <div class="habit">
+        <span>Study</span>
+        <input type="checkbox" onchange="saveHabit('Study',this.checked)">
+      </div>
+      <div class="habit">
+        <span>Meditation</span>
+        <input type="checkbox" onchange="saveHabit('Meditation',this.checked)">
+      </div>
+    </section>
+  </div>
 </div>
 
 <!-- FIREBASE COMPAT SDK -->
@@ -115,7 +128,7 @@ section h2 {color:var(--glow); border-left:4px solid var(--glow); padding-left:1
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
 
 <script>
-// 🔹 Your Firebase Config
+// 🔹 Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyCFzIAZ5F5YRQJ3zjOb0U9KJGI6aed_WKI",
   authDomain: "sololeveling-b9f87.firebaseapp.com",
@@ -125,12 +138,11 @@ const firebaseConfig = {
   appId: "1:85355794256:web:5e0b8e52d81d01cb202655"
 };
 firebase.initializeApp(firebaseConfig);
-
 const auth = firebase.auth();
 const db = firebase.firestore();
 const storage = firebase.storage();
 
-/* LOGIN FUNCTION */
+/* LOGIN */
 function login() {
   const loginBox = document.getElementById("login");
   const contentBox = document.getElementById("content");
@@ -140,7 +152,7 @@ function login() {
   auth.signInWithEmailAndPassword(emailInput, passwordInput)
     .then(() => {
       loginBox.style.display = "none";
-      contentBox.style.display = "block";
+      contentBox.style.display = "flex";
       loadGallery();
     })
     .catch(err => {
@@ -154,6 +166,13 @@ function toggleMusic(){
   const e = document.getElementById("equalizer");
   if(m.paused){ m.play(); e.classList.add("playing"); }
   else{ m.pause(); e.classList.remove("playing"); }
+}
+
+/* SHOW SECTION */
+function showSection(id){
+  document.getElementById("gallerySection").style.display = "none";
+  document.getElementById("habitSection").style.display = "none";
+  document.getElementById(id).style.display = "block";
 }
 
 /* HABITS */
