--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Solo Leveling Dashboard</title>
+<title>Solo Leveling</title>
 <style>
 :root {
   --glow: #7f5cff;
-  --bg-glass: rgba(10,10,25,0.75);
+  --bg-glass: rgba(10,10,25,0.85);
 }
 body {
   margin:0; font-family:"Segoe UI", Arial, sans-serif;
@@ -15,43 +15,52 @@ body {
   overflow-x: hidden;
 }
 
-/* LOGIN SCREEN */
-#login {
-  height:100vh; display:flex; justify-content:center; align-items:center;
-}
+/* LOGIN */
+#login {height:100vh; display:flex; justify-content:center; align-items:center;}
 .login-box {
   background: var(--bg-glass); padding:30px; border-radius:14px;
   border:1px solid var(--glow); box-shadow:0 0 25px rgba(127,92,255,0.4); width:300px;
 }
-.login-box h2 {text-align:center; color:var(--glow); letter-spacing:1px;}
+.login-box h2 {text-align:center; color:var(--glow);}
 input, button {width:100%; padding:10px; margin-top:12px; border-radius:6px; border:none; outline:none;}
 input{background:#111;color:white;}
 button{background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; font-weight:bold; cursor:pointer;}
 
-/* MAIN DASHBOARD */
-#content {display:none; display:flex; height:100vh;}
-#menu {width:220px; background:var(--bg-glass); padding:20px; display:flex; flex-direction:column; border-right:1px solid var(--glow);}
+/* DASHBOARD */
+#content {display:none;}
+/* SIDEBAR */
+#menu {
+  position:fixed; left:-220px; top:0; width:200px; height:100vh;
+  background:var(--bg-glass); padding:20px; transition:0.3s; z-index:1000;
+}
 #menu h3{color:var(--glow); margin-bottom:15px;}
-.menu-btn{padding:12px; margin-bottom:10px; border:none; background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; border-radius:8px; cursor:pointer; text-align:left; font-weight:bold;}
-#main {flex:1; padding:20px; overflow-y:auto;}
-section {background:rgba(10,10,25,0.75); padding:20px; border-radius:14px; border:1px solid rgba(127,92,255,0.4); box-shadow:0 0 20px rgba(127,92,255,0.2); margin-bottom:20px;}
+.menu-btn{padding:12px; margin-bottom:10px; border:none; background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; border-radius:8px; cursor:pointer; text-align:left; font-weight:bold; width:100%;}
+/* MAIN AREA */
+#main {margin-left:0; transition:0.3s; padding:20px;}
+section {display:none; background:rgba(10,10,25,0.75); padding:20px; border-radius:14px; border:1px solid rgba(127,92,255,0.4); box-shadow:0 0 20px rgba(127,92,255,0.2); margin-bottom:20px;}
 section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10px; margin-bottom:15px;}
 
-/* GALLERY */
-#gallery img{width:150px;margin:10px;border-radius:10px;box-shadow:0 0 15px rgba(127,92,255,0.4);}
-#gallery video{width:300px;margin:10px;border-radius:10px;box-shadow:0 0 20px rgba(127,92,255,0.4);}
+/* GALLERY GRID */
+#photoGallery, #videoGallery {display:grid; grid-template-columns: repeat(auto-fill,minmax(120px,1fr)); gap:10px;}
+#photoGallery img, #videoGallery video {border-radius:8px; cursor:pointer;}
 
 /* HABITS */
 .habit{display:flex;justify-content:space-between;margin:10px 0;padding:8px 12px;background:rgba(0,0,0,0.4);border-radius:8px;}
 
-/* UPLOAD */
+/* UPLOAD BUTTONS */
 .upload-btn {margin-top:10px;padding:10px;border:none;border-radius:6px;background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; cursor:pointer;}
 
-/* EQUALIZER */
+/* MUSIC EQUALIZER */
 .equalizer{position:fixed; bottom:20px; left:20px; width:70px; cursor:pointer; filter:drop-shadow(0 0 10px var(--glow));}
 .bar{transform-origin:bottom;animation:bounce 1.2s infinite ease-in-out; fill:#bfa8ff;}
 .playing .bar{animation-duration:0.6s;}
 @keyframes bounce{0%,100%{transform:scaleY(0.3);}50%{transform:scaleY(1);}}
+/* MODAL */
+.modal{display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); justify-content:center; align-items:center; z-index:1000;}
+.modal img, .modal video{max-width:90%; max-height:90%; border-radius:10px;}
+
+/* MENU TOGGLE BUTTON */
+#menuToggle {position:fixed;top:20px;left:20px;z-index:1001; padding:10px; border:none; background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; border-radius:8px; cursor:pointer;}
 </style>
 </head>
 <body>
@@ -59,7 +68,7 @@ section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10
 <!-- LOGIN -->
 <div id="login">
   <div class="login-box">
-    <h2>SOLO LOGIN</h2>
+    <h2>LOGIN</h2>
     <input id="email" placeholder="Email">
     <input id="password" type="password" placeholder="Password">
     <button onclick="login()">ENTER</button>
@@ -69,20 +78,23 @@ section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10
 
 <!-- DASHBOARD -->
 <div id="content">
-  <!-- LEFT MENU -->
+  <!-- MENU TOGGLE -->
+  <button id="menuToggle">☰</button>
+
+  <!-- SIDEBAR -->
   <div id="menu">
     <h3>MENU</h3>
-    <button class="menu-btn" onclick="showSection('gallerySection')">Gallery</button>
+    <button class="menu-btn" onclick="showSection('photoSection')">Photos</button>
+    <button class="menu-btn" onclick="showSection('videoSection')">Videos</button>
     <button class="menu-btn" onclick="showSection('habitSection')">Habits</button>
     <button class="menu-btn" onclick="toggleMusic()">Music</button>
   </div>
 
-  <!-- MAIN AREA -->
+  <!-- MAIN CONTENT -->
   <div id="main">
     <!-- MUSIC -->
     <audio id="music" loop>
       <source src="music.mp3" type="audio/mp3">
-      Your browser does not support audio.
     </audio>
     <svg class="equalizer" id="equalizer" viewBox="0 0 100 100" onclick="toggleMusic()">
       <rect class="bar" x="10" y="20" width="10" height="60"/>
@@ -92,43 +104,41 @@ section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10
       <rect class="bar" x="90" y="20" width="10" height="60"/>
     </svg>
 
-    <!-- GALLERY SECTION -->
-    <section id="gallerySection">
-      <h2>SHADOW GALLERY</h2>
+    <!-- PHOTOS -->
+    <section id="photoSection">
+      <h2>Photos</h2>
       <input type="file" id="photoUpload" accept="image/*">
       <button class="upload-btn" onclick="uploadFile('photo')">Upload Photo</button>
-      <input type="file" id="videoUpload" accept="video/*">
-      <button class="upload-btn" onclick="uploadFile('video')">Upload Video</button>
-      <div id="gallery"></div>
+      <div id="photoGallery"></div>
+      <div id="photoModal" class="modal"><img id="modalPhoto" src=""></div>
     </section>
 
-    <!-- HABIT SECTION -->
-    <section id="habitSection" style="display:none;">
-      <h2>DAILY QUESTS</h2>
-      <div class="habit">
-        <span>Workout</span>
-        <input type="checkbox" onchange="saveHabit('Workout',this.checked)">
-      </div>
-      <div class="habit">
-        <span>Study</span>
-        <input type="checkbox" onchange="saveHabit('Study',this.checked)">
-      </div>
-      <div class="habit">
-        <span>Meditation</span>
-        <input type="checkbox" onchange="saveHabit('Meditation',this.checked)">
-      </div>
+    <!-- VIDEOS -->
+    <section id="videoSection">
+      <h2>Videos</h2>
+      <input type="file" id="videoUpload" accept="video/*">
+      <button class="upload-btn" onclick="uploadFile('video')">Upload Video</button>
+      <div id="videoGallery"></div>
+      <div id="videoModal" class="modal"><video id="modalVideo" controls></video></div>
+    </section>
+
+    <!-- HABITS -->
+    <section id="habitSection">
+      <h2>Daily Habits</h2>
+      <div class="habit"><span>Workout</span><input type="checkbox" onchange="saveHabit('Workout',this.checked)"></div>
+      <div class="habit"><span>Study</span><input type="checkbox" onchange="saveHabit('Study',this.checked)"></div>
+      <div class="habit"><span>Meditation</span><input type="checkbox" onchange="saveHabit('Meditation',this.checked)"></div>
     </section>
   </div>
 </div>
 
-<!-- FIREBASE COMPAT SDK -->
+<!-- FIREBASE SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
 
 <script>
-// 🔹 Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyCFzIAZ5F5YRQJ3zjOb0U9KJGI6aed_WKI",
   authDomain: "sololeveling-b9f87.firebaseapp.com",
@@ -146,18 +156,12 @@ const storage = firebase.storage();
 function login() {
   const loginBox = document.getElementById("login");
   const contentBox = document.getElementById("content");
-  const emailInput = document.getElementById("email").value;
-  const passwordInput = document.getElementById("password").value;
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
 
-  auth.signInWithEmailAndPassword(emailInput, passwordInput)
-    .then(() => {
-      loginBox.style.display = "none";
-      contentBox.style.display = "flex";
-      loadGallery();
-    })
-    .catch(err => {
-      document.getElementById("error").innerText = err.message;
-    });
+  auth.signInWithEmailAndPassword(email,password)
+    .then(()=>{ loginBox.style.display="none"; contentBox.style.display="block"; showSection('photoSection'); loadGallery(); })
+    .catch(err=>{ document.getElementById("error").innerText = err.message; });
 }
 
 /* MUSIC */
@@ -170,56 +174,78 @@ function toggleMusic(){
 
 /* SHOW SECTION */
 function showSection(id){
-  document.getElementById("gallerySection").style.display = "none";
-  document.getElementById("habitSection").style.display = "none";
-  document.getElementById(id).style.display = "block";
+  const sections = ['photoSection','videoSection','habitSection'];
+  sections.forEach(s=>document.getElementById(s).style.display="none");
+  document.getElementById(id).style.display="block";
 }
 
 /* HABITS */
 function saveHabit(name,value){
   db.collection("habits").add({
-    habit:name,
-    completed:value,
+    habit:name, completed:value,
     date:new Date().toISOString().split("T")[0],
     uid:auth.currentUser.uid,
     createdAt:firebase.firestore.FieldValue.serverTimestamp()
   });
 }
 
-/* GALLERY */
+/* LOAD GALLERY */
 function loadGallery(){
-  const gallery = document.getElementById("gallery");
-  db.collection("media").orderBy("createdAt","desc")
-    .onSnapshot(snap=>{
-      gallery.innerHTML="";
-      snap.forEach(doc=>{
-        const d = doc.data();
-        if(d.type==="photo"){ const img=document.createElement("img"); img.src=d.url; gallery.appendChild(img); }
-        if(d.type==="video"){ const v=document.createElement("video"); v.src=d.url; v.controls=true; gallery.appendChild(v); }
-      });
+  const photoGallery = document.getElementById("photoGallery");
+  const videoGallery = document.getElementById("videoGallery");
+  photoGallery.innerHTML = ""; videoGallery.innerHTML = "";
+
+  db.collection("media").orderBy("createdAt","desc").onSnapshot(snapshot=>{
+    snapshot.forEach(doc=>{
+      const data = doc.data();
+      if(data.type==="photo"){
+        const img = document.createElement("img");
+        img.src = data.url;
+        img.onclick = ()=>{ document.getElementById("photoModal").style.display="flex"; document.getElementById("modalPhoto").src=data.url; };
+        photoGallery.appendChild(img);
+      }
+      if(data.type==="video"){
+        const v = document.createElement("video");
+        v.src = data.url; v.controls=true;
+        v.onclick = ()=>{ 
+          const modal = document.getElementById("videoModal"); 
+          const modalVideo = document.getElementById("modalVideo");
+          modal.style.display="flex"; modalVideo.src=data.url; modalVideo.play();
+        };
+        videoGallery.appendChild(v);
+      }
     });
+  });
+
+  document.getElementById("photoModal").onclick = e=>{ if(e.target.id==="photoModal"){ e.target.style.display="none"; } };
+  document.getElementById("videoModal").onclick = e=>{ if(e.target.id==="videoModal"){ const v=document.getElementById("modalVideo"); v.pause(); e.target.style.display="none"; } };
 }
 
 /* UPLOAD FILES */
 function uploadFile(type){
   const fileInput = type==="photo"? document.getElementById("photoUpload") : document.getElementById("videoUpload");
-  if(fileInput.files.length===0){alert("Select a file first!"); return;}
+  if(fileInput.files.length===0){ alert("Select a file"); return; }
   const file = fileInput.files[0];
   const path = `${type}s/${Date.now()}_${file.name}`;
   const storageRef = storage.ref(path);
   storageRef.put(file).then(snapshot=>{
     snapshot.ref.getDownloadURL().then(url=>{
-      db.collection("media").add({
-        url: url,
-        type: type,
-        createdAt: firebase.firestore.FieldValue.serverTimestamp(),
-        uid: auth.currentUser.uid
-      });
-      alert(type+" uploaded!");
-      fileInput.value="";
+      db.collection("media").add({ url:url, type:type, createdAt:firebase.firestore.FieldValue.serverTimestamp(), uid:auth.currentUser.uid });
+      alert(type+" uploaded!"); fileInput.value="";
     });
   });
 }
+
+/* SIDEBAR TOGGLE */
+const menu = document.getElementById("menu");
+const main = document.getElementById("main");
+const toggleBtn = document.getElementById("menuToggle");
+let sidebarVisible = false;
+toggleBtn.onclick = () => {
+  if(!sidebarVisible){ menu.style.left="0"; main.style.marginLeft="220px"; }
+  else{ menu.style.left="-220px"; main.style.marginLeft="0"; }
+  sidebarVisible = !sidebarVisible;
+};
 </script>
 </body>
 </html>
