--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Solo Leveling</title>
+<title>Solo Leveling Dashboard</title>
 <style>
 :root {
   --glow: #7f5cff;
@@ -28,13 +28,15 @@ button{background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; font-wei
 
 /* DASHBOARD */
 #content {display:none;}
-/* SIDEBAR */
+
+/* SIDEBAR (HIDDEN INITIALLY) */
 #menu {
-  position:fixed; left:-220px; top:0; width:200px; height:100vh;
-  background:var(--bg-glass); padding:20px; transition:0.3s; z-index:1000;
+  position:fixed; left:-240px; top:0; width:220px; height:100%;
+  background:var(--bg-glass); padding:20px; transition:left 0.3s ease; z-index:1000;
 }
 #menu h3{color:var(--glow); margin-bottom:15px;}
 .menu-btn{padding:12px; margin-bottom:10px; border:none; background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; border-radius:8px; cursor:pointer; text-align:left; font-weight:bold; width:100%;}
+
 /* MAIN AREA */
 #main {margin-left:0; transition:0.3s; padding:20px;}
 section {display:none; background:rgba(10,10,25,0.75); padding:20px; border-radius:14px; border:1px solid rgba(127,92,255,0.4); box-shadow:0 0 20px rgba(127,92,255,0.2); margin-bottom:20px;}
@@ -55,12 +57,13 @@ section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10
 .bar{transform-origin:bottom;animation:bounce 1.2s infinite ease-in-out; fill:#bfa8ff;}
 .playing .bar{animation-duration:0.6s;}
 @keyframes bounce{0%,100%{transform:scaleY(0.3);}50%{transform:scaleY(1);}}
+
 /* MODAL */
 .modal{display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); justify-content:center; align-items:center; z-index:1000;}
 .modal img, .modal video{max-width:90%; max-height:90%; border-radius:10px;}
 
 /* MENU TOGGLE BUTTON */
-#menuToggle {position:fixed;top:20px;left:20px;z-index:1001; padding:10px; border:none; background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; border-radius:8px; cursor:pointer;}
+#menuToggle {position:fixed;top:14px;left:14px;z-index:1001; background:rgba(127,92,255,0.8); color:white; padding:12px; border-radius:8px; border:none; font-size:22px; cursor:pointer;}
 </style>
 </head>
 <body>
@@ -68,7 +71,7 @@ section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10
 <!-- LOGIN -->
 <div id="login">
   <div class="login-box">
-    <h2>LOGIN</h2>
+    <h2>SOLO LOGIN</h2>
     <input id="email" placeholder="Email">
     <input id="password" type="password" placeholder="Password">
     <button onclick="login()">ENTER</button>
@@ -104,7 +107,7 @@ section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10
       <rect class="bar" x="90" y="20" width="10" height="60"/>
     </svg>
 
-    <!-- PHOTOS -->
+    <!-- PHOTOS SECTION -->
     <section id="photoSection">
       <h2>Photos</h2>
       <input type="file" id="photoUpload" accept="image/*">
@@ -113,7 +116,7 @@ section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10
       <div id="photoModal" class="modal"><img id="modalPhoto" src=""></div>
     </section>
 
-    <!-- VIDEOS -->
+    <!-- VIDEOS SECTION -->
     <section id="videoSection">
       <h2>Videos</h2>
       <input type="file" id="videoUpload" accept="video/*">
@@ -122,7 +125,7 @@ section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10
       <div id="videoModal" class="modal"><video id="modalVideo" controls></video></div>
     </section>
 
-    <!-- HABITS -->
+    <!-- HABITS SECTION -->
     <section id="habitSection">
       <h2>Daily Habits</h2>
       <div class="habit"><span>Workout</span><input type="checkbox" onchange="saveHabit('Workout',this.checked)"></div>
@@ -243,7 +246,7 @@ const toggleBtn = document.getElementById("menuToggle");
 let sidebarVisible = false;
 toggleBtn.onclick = () => {
   if(!sidebarVisible){ menu.style.left="0"; main.style.marginLeft="220px"; }
-  else{ menu.style.left="-220px"; main.style.marginLeft="0"; }
+  else{ menu.style.left="-240px"; main.style.marginLeft="0"; }
   sidebarVisible = !sidebarVisible;
 };
 </script>
