--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Music Background with Login</title>
+<title>sololeveling</title>
 
 <style>
 html, body {
